--- a/templates/slide_3.html
+++ b/templates/slide_3.html
@@ -269,7 +269,7 @@
                 ]
                 document.addEventListener("DOMContentLoaded", function() {
 
-                    new Chart("hoursBarGraph", {
+                    let hoursBarGraph = new Chart("hoursBarGraph", {
                     type: "bar",
                     data: {
                         labels: xValues,
@@ -329,6 +329,47 @@
                         }
                     }
                 });
+
+                document.getElementById('dark-mode-btn').onclick = function () {
+                    document.body.classList.toggle('dark-mode');
+
+                    if (document.body.classList.contains('dark-mode')) {
+                        localStorage.setItem('dark_mode', 'on');
+                        console.log('dark mode on');
+                    } else {
+                        localStorage.setItem('dark_mode', 'off');
+                        console.log("dark mode off");
+                        console.log(localStorage.getItem('dark_mode'));
+                    }
+
+                    const rainbows = document.getElementsByClassName('rainbow');
+                    const dark_mode = localStorage.getItem('dark_mode') === 'on';
+                    if (dark_mode) {
+                        for (let i = 0; i < rainbows.length; i++) {
+                            rainbows[i].src = "{% static 'slide_2/dark_mode_rainbow.png' %}";
+                        }
+
+                        hoursBarGraph.options.scales.xAxes[0].ticks.fontColor = '#a8a6a6';
+                        hoursBarGraph.options.scales.xAxes[0].gridLines.color = '#a8a6a6';
+                        hoursBarGraph.options.scales.yAxes[0].ticks.fontColor ='#a8a6a6';
+                        hoursBarGraph.options.scales.yAxes[0].gridLines.color = '#a8a6a6';
+                        hoursBarGraph.options.scales.yAxes[0].scaleLabel.fontColor = '#a8a6a6';
+                        hoursBarGraph.options.legend.labels.fontColor = '#a8a6a6';
+                    } else {
+                        for (let i = 0; i < rainbows.length; i++) {
+                            rainbows[i].src = "{% static 'slide_2/top_left_corner_rainbow.png' %}";
+                        }
+
+                        hoursBarGraph.options.scales.xAxes[0].ticks.fontColor = "#473924";
+                        hoursBarGraph.options.scales.xAxes[0].gridLines.color = "#473924";
+                        hoursBarGraph.options.scales.yAxes[0].ticks.fontColor ="#473924";
+                        hoursBarGraph.options.scales.yAxes[0].gridLines.color = "#473924";
+                        hoursBarGraph.options.scales.yAxes[0].scaleLabel.fontColor = "#473924";
+                        hoursBarGraph.options.legend.labels.fontColor = "#473924";
+                    }
+
+                    hoursBarGraph.update();
+                };
             })
             </script>
 
