--- a/templates/topArtistAndSongs.html
+++ b/templates/topArtistAndSongs.html
@@ -61,7 +61,7 @@
         /* Combined Title Styling */
         .page-title {
             font-size: 20px;
-            color: #D24E0D;
+            color: #C7443A;
             margin-bottom: 20px;
             text-align: center;
             margin-top: 20px;
@@ -259,14 +259,18 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            background-color: #4a773c;
+            background-color: dimgray;
             color: white;
             font-size: 1rem;
             transition: background-color 0.3s;
         }
 
         .play-btn:hover, .stop-btn:hover {
-            background-color: #3a5a2c;
+            background-color: #454545;
+        }
+
+        .right-align {
+            text-align: right;
         }
 
     </style>
@@ -351,9 +355,9 @@
             </div>
     
             <div class="small-record-container small-record-container2">
-                <div class="small-record-text">
+                <div class="small-record-text right-align">
                     <div class="song-text-song">{{top_songs.1}}</div>
-                    <div class="song-text-artist">{{top_songs_artists.1}}</div>
+                    <div class="song-text-artist right-align">{{top_songs_artists.1}}</div>
                     <div class="audio-controls">
                         <button class="play-btn" onclick="toggleAudio(this)">
                             {% if language == "english" %}
@@ -409,9 +413,9 @@
             </div>
     
             <div class="small-record-container small-record-container4">
-                <div class="small-record-text">
+                <div class="small-record-text right-align">
                     <div class="song-text-song">{{top_songs.3}}</div>
-                    <div class="song-text-artist">{{top_songs_artists.3}}</div>
+                    <div class="song-text-artist right-align">{{top_songs_artists.3}}</div>
                     <div class="audio-controls">
                         <button class="play-btn" onclick="toggleAudio(this)">
                             {% if language == "english" %}
