made changes to make the buttons more consistent with overall style

--- a/templates/game_mix_pitch.html
+++ b/templates/game_mix_pitch.html
@@ -117,12 +117,12 @@
     }
 
     .submit-btn {
-        background-color: #007BFF;
+        background-color: #5AABF3;
         margin-top: 20px;
     }
 
     .reset-btn {
-        background-color: #FF4500;
+        background-color: #EF6E53;
     }
 
     .submit-btn, .reset-btn, .continue-btn, .back-btn{
@@ -134,35 +134,35 @@
     }
 
     .continue-btn {
-        background-color: #800080;
+        background-color: #c4b3ff;
         color: white;
         position: absolute;
         left: calc(50% + 130px);
-        top: 619px
+        top: 628px
     }
 
     .back-btn {
-        background-color: #17a2b8;
+        background-color: #c4b3ff;
         color: white;
         position: absolute;
         left: calc(50% + 130px);
-        top: 729px
+        top: 738px
     }
 
     .submit-btn:hover {
-        background-color: #0056b3;
+        background-color: #3d90d9;
     }
 
     .reset-btn:hover {
-        background-color: #e03e00;
+        background-color: #cf5138;
     }
 
     .continue-btn:hover {
-        background-color: #6a006a;
+        background-color: #b4a6de;
     }
 
     .back-btn:hover {
-        background-color: #117a8b;
+        background-color: #b4a6de;
     }
 </style>
 {% endblock %}
