make llm insights go to 2nd transition

--- a/templates/LLMinsights.html
+++ b/templates/LLMinsights.html
@@ -239,7 +239,9 @@
         </div>
     </div>
 
-    <img src="{% static 'topArtist/triangle_button.png' %}" class="forward-triangle-button" alt="Forward Button">
+    <a href="{% url 'transition_two' %}">
+        <img src="{% static 'topArtist/triangle_button.png' %}" class="forward-triangle-button" alt="Forward Button">
+    </a>
 
 
     <div class="circle-container">
