--- a/templates/seasonalMood.html
+++ b/templates/seasonalMood.html
@@ -91,6 +91,10 @@
             border-radius: 50%;
         }
 
+        body.dark-mode .small-record {
+            box-shadow: 0 0 20px #777676;
+        }
+
         .small-record-container {
             display: flex;
             flex-direction: row;
