--- a/templates/slide_2.html
+++ b/templates/slide_2.html
@@ -110,6 +110,11 @@
        .chart-legend {
            padding-top: 50px;
        }
+
+       body.dark-mode .slide-title {
+           color: #DDC371;
+           text-shadow: 1px 1px aliceblue;;
+       }
    </style>
 
         <script
