--- a/templates/topArtistAndSongs.html
+++ b/templates/topArtistAndSongs.html
@@ -273,6 +273,18 @@
             text-align: right;
         }
 
+        body.dark-mode .red {
+            box-shadow: inset #C7443A 0 0 20px;
+        }
+
+        body.dark-mode .yellow {
+            box-shadow: inset #ECD101 0 0 20px;
+        }
+
+        body.dark-mode .blue {
+            box-shadow: inset #5AABF3 0 0 20px;
+        }
+
     </style>
 
     <script>
@@ -331,7 +343,7 @@
                     <div class="song-text-song">{{top_songs.0}}</div>
                     <div class="song-text-artist">{{top_songs_artists.0}}</div>
                     <div class="audio-controls">
-                        <button class="play-btn" onclick="toggleAudio(this)">
+                        <button class="play-btn red" onclick="toggleAudio(this)">
                             {% if language == "english" %}
                                 Play
                             {% elif language == "hindi" %}
@@ -340,7 +352,7 @@
                                 播放
                             {% endif %}
                         </button>
-                        <button class="stop-btn" onclick="stopAudio(this)">
+                        <button class="stop-btn red" onclick="stopAudio(this)">
                             {% if language == "english" %}
                                 Reset
                             {% elif language == "hindi" %}
@@ -359,7 +371,7 @@
                     <div class="song-text-song">{{top_songs.1}}</div>
                     <div class="song-text-artist right-align">{{top_songs_artists.1}}</div>
                     <div class="audio-controls">
-                        <button class="play-btn" onclick="toggleAudio(this)">
+                        <button class="play-btn yellow" onclick="toggleAudio(this)">
                             {% if language == "english" %}
                                 Play
                             {% elif language == "hindi" %}
@@ -368,7 +380,7 @@
                                 播放
                             {% endif %}
                         </button>
-                        <button class="stop-btn" onclick="stopAudio(this)">
+                        <button class="stop-btn yellow" onclick="stopAudio(this)">
                             {% if language == "english" %}
                                 Reset
                             {% elif language == "hindi" %}
@@ -389,7 +401,7 @@
                     <div class="song-text-song">{{top_songs.2}}</div>
                     <div class="song-text-artist">{{top_songs_artists.2}}</div>
                     <div class="audio-controls">
-                        <button class="play-btn" onclick="toggleAudio(this)">
+                        <button class="play-btn blue" onclick="toggleAudio(this)">
                             {% if language == "english" %}
                                 Play
                             {% elif language == "hindi" %}
@@ -398,7 +410,7 @@
                                 播放
                             {% endif %}
                         </button>
-                        <button class="stop-btn" onclick="stopAudio(this)">
+                        <button class="stop-btn blue" onclick="stopAudio(this)">
                             {% if language == "english" %}
                                 Reset
                             {% elif language == "hindi" %}
@@ -417,7 +429,7 @@
                     <div class="song-text-song">{{top_songs.3}}</div>
                     <div class="song-text-artist right-align">{{top_songs_artists.3}}</div>
                     <div class="audio-controls">
-                        <button class="play-btn" onclick="toggleAudio(this)">
+                        <button class="play-btn red" onclick="toggleAudio(this)">
                             {% if language == "english" %}
                                 Play
                             {% elif language == "hindi" %}
@@ -426,7 +438,7 @@
                                 播放
                             {% endif %}
                         </button>
-                        <button class="stop-btn" onclick="stopAudio(this)">
+                        <button class="stop-btn red" onclick="stopAudio(this)">
                             {% if language == "english" %}
                                 Reset
                             {% elif language == "hindi" %}
@@ -447,7 +459,7 @@
                     <div class="song-text-song">{{top_songs.4}}</div>
                     <div class="song-text-artist">{{top_songs_artists.4}}</div>
                     <div class="audio-controls">
-                        <button class="play-btn" onclick="toggleAudio(this)">
+                        <button class="play-btn yellow" onclick="toggleAudio(this)">
                             {% if language == "english" %}
                                 Play
                             {% elif language == "hindi" %}
@@ -456,7 +468,7 @@
                                 播放
                             {% endif %}
                         </button>
-                        <button class="stop-btn" onclick="stopAudio(this)">
+                        <button class="stop-btn yellow" onclick="stopAudio(this)">
                             {% if language == "english" %}
                                 Reset
                             {% elif language == "hindi" %}
