--- a/templates/base.html
+++ b/templates/base.html
@@ -305,36 +305,48 @@
     </div>
 
     {% if hideMenu != False %}
-    <div class="sidebar" id="sidebar">
-        {% if language == "english" %}
-            <a href="{% url 'home' %}">Home</a>
-            <a href="{% url 'top_artist' %}">Top Artists and Top Songs</a>
-            <a href="{% url 'slide_2' %}">Top Artist Graph</a>
-            <a href="{% url 'llm_insights_page' %}">LLM Insights</a>
-            <a href="{% url 'game' %}">Game</a>
-            <a href="{% url 'contact' %}">Contact</a>
-            <a href="{% url 'profile' %}">Profile</a>
-            <a href="{% url 'logout' %}">Logout</a>
-        {% elif language == "hindi" %}
-            <a href="{% url 'home' %}">होम</a>
-            <a href="{% url 'top_artist' %}">शीर्ष कलाकार और गाने</a>
-            <a href="{% url 'slide_2' %}">कलाकार ग्राफ</a>
-            <a href="{% url 'llm_insights_page' %}">एलएलएम इनसाइट्स</a>
-            <a href="{% url 'game' %}">गेम</a>
-            <a href="{% url 'contact' %}">संपर्क</a>
-            <a href="{% url 'profile' %}">प्रोफ़ाइल</a>
-            <a href="{% url 'logout' %}">लॉगआउट</a>
-        {% elif language == "mandarin" %}
-            <a href="{% url 'home' %}">主页</a>
-            <a href="{% url 'top_artist' %}">最佳艺术家和歌曲</a>
-            <a href="{% url 'slide_2' %}">艺术家图表</a>
-            <a href="{% url 'llm_insights_page' %}">LLM见解</a>
-            <a href="{% url 'game' %}">游戏</a>
-            <a href="{% url 'contact' %}">联系我们</a>
-            <a href="{% url 'profile' %}">个人资料</a>
-            <a href="{% url 'logout' %}">退出登录</a>
-        {% endif %}
-    </div>
+        <div class="sidebar" id="sidebar">
+            {% if language == "english" %}
+                <a href="{% url 'home' %}">Home</a>
+                <a href="{% url 'top_artist' %}">Top Artists and Top Songs</a>
+                <a href="{% url 'slide_2' %}">Top Artist Graph</a>
+                <a href="{% url 'slide_3' %}">Listening Times</a>
+                <a href="{% url 'analyze_seasonal_mood' %}">Seasonal Mood</a>
+                <a href="{% url 'ads_minutes' %}">Analyzing Ads</a>
+                <a href="{% url 'llm_insights_page' %}">LLM Insights</a>
+                <a href="{% url 'game' %}">Game</a>
+                <hr>
+                <a href="{% url 'contact' %}">Contact</a>
+                <a href="{% url 'profile' %}">Profile</a>
+                <a href="{% url 'logout' %}">Logout</a>
+            {% elif language == "hindi" %}
+                <a href="{% url 'home' %}">मुख्य पृष्ठ</a>
+                <a href="{% url 'top_artist' %}">शीर्ष कलाकार और शीर्ष गाने</a>
+                <a href="{% url 'slide_2' %}">शीर्ष कलाकार ग्राफ</a>
+                <a href="{% url 'slide_3' %}">सुनने का समय</a>
+                <a href="{% url 'analyze_seasonal_mood' %}">मौसमी मूड</a>
+                <a href="{% url 'ads_minutes' %}">विज्ञापनों का विश्लेषण</a>
+                <a href="{% url 'llm_insights_page' %}">एलएलएम अंतर्दृष्टि</a>
+                <a href="{% url 'game' %}">खेल</a>
+                <hr>
+                <a href="{% url 'contact' %}">संपर्क करें</a>
+                <a href="{% url 'profile' %}">प्रोफ़ाइल</a>
+                <a href="{% url 'logout' %}">लॉगआउट</a>
+            {% elif language == "mandarin" %}
+                <a href="{% url 'home' %}">主页</a>
+                <a href="{% url 'top_artist' %}">顶级艺术家和歌曲</a>
+                <a href="{% url 'slide_2' %}">顶级艺术家图表</a>
+                <a href="{% url 'slide_3' %}">收听时间</a>
+                <a href="{% url 'analyze_seasonal_mood' %}">季节情绪</a>
+                <a href="{% url 'ads_minutes' %}">广告分析</a>
+                <a href="{% url 'llm_insights_page' %}">LLM 洞察</a>
+                <a href="{% url 'game' %}">游戏</a>
+                <hr>
+                <a href="{% url 'contact' %}">联系</a>
+                <a href="{% url 'profile' %}">个人资料</a>
+                <a href="{% url 'logout' %}">退出登录</a>
+            {% endif %}
+        </div>
     {% endif %}
 
 
