finished body of all holiday pages. will update nav bar soon.

--- a/templates/christmas_llm.html
+++ b/templates/christmas_llm.html
@@ -50,7 +50,7 @@
         }
 
         .menu-icon {
-            color: #ECD101;
+            color: red;
             font-size: 65px;
         }
 
