--- a/templates/halloween_llm.html
+++ b/templates/halloween_llm.html
@@ -50,7 +50,7 @@
         }
 
         .menu-icon {
-            color: #ECD101;
+            color: orange;
             font-size: 65px;
         }
 
@@ -68,7 +68,7 @@
         }
 
         .profile {
-            color: #ECD101;
+            color: orange;
             font-size: 20px;
         }
 
