--- a/templates/christmasone.html
+++ b/templates/christmasone.html
@@ -40,6 +40,41 @@
             overflow: hidden;
         }
 
+        /* Fixed Header */
+        .header {
+            width: 100%;
+            height: 100px;
+            background-color: darkgreen;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            color: red;
+            padding: 0 40px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+        }
+
+        .menu-icon {
+            color: red;
+            font-size: 65px;
+        }
+
+        .title {
+            font-size: 36px;
+            font-weight: bold;
+            color: red;
+            text-shadow:
+                -1px -1px 0 #C64036,
+                1px -1px 0 #C64036,
+                -1px 1px 0 #C64036,
+                1px 1px 0 #C64036;
+            text-align: center;
+            flex-grow: 1;
+        }
+
+
         .top-left {
            position: absolute;
            top: -50px;
