--- a/templates/halloween_seasonal.html
+++ b/templates/halloween_seasonal.html
@@ -28,6 +28,42 @@
             overflow: hidden;
         }
 
+        /* Fixed Header */
+        .header {
+            width: 100%;
+            height: 100px;
+            background-color: black;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            color: orange;
+            padding: 0 40px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+        }
+
+        .menu-icon {
+            color: orange;
+            font-size: 65px;
+        }
+
+        .title {
+            font-size: 36px;
+            font-weight: bold;
+            color: orange;
+            text-shadow:
+                -1px -1px 0 #C64036,
+                1px -1px 0 #C64036,
+                -1px 1px 0 #C64036,
+                1px 1px 0 #C64036;
+            text-align: center;
+            flex-grow: 1;
+        }
+
+
+
         .top-corner-rainbow {
             width: 300px;
             height: 300px;
