--- a/templates/profile.html
+++ b/templates/profile.html
@@ -354,11 +354,11 @@
                 <div class="info-item">
                     <label>
                         {% if language == "english" %}
-                            TOP FIVE ARTISTS
+                            TOP FIVE SONGS
                         {% elif language == "hindi" %}
-                            शीर्ष पांच कलाकार
+                            शीर्ष पांच गाने
                         {% elif language == "mandarin" %}
-                            五大最爱艺术家
+                            排名前五的歌曲
                         {% endif %}
                     </label>
                 </div>
