removed email from profile

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -301,6 +301,7 @@
             <div class="data-field username-field">{{ username }}</div>
         </div>
         <div class="info-item">
+            <!--
             <label>
                 {% if language == "english" %}
                     EMAIL:
@@ -310,7 +311,7 @@
                     邮箱：
                 {% endif %}
             </label>
-            <div class="data-field email-field">{{ email }}</div>
+            <div class="data-field email-field">{{ email }}</div> i don't think our user model saves their email?-->
         </div>
         <div class="info-item">
             <label>
